--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   "author": "Mathias Alvez",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "connect-multiparty": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "jwt-simple": "^0.5.5",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
-    "mongoose-pagination": "^1.0.0"
+    "mongoose-pagination": "^1.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
