--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "connect-mongo": "^2.0.3",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "dependencies": "0.0.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jwt-simple": "^0.5.5",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "mongoose-pagination": "^1.0.0",
@@ -25,6 +27,6 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.11"
   }
 }
